# accomplish

./: .credo.exs  .gitignore  .iex.exs  .tool-versions  Cargo.toml  README.md  coveralls.json  docker-compose.yml  init_localstack.sh  mix.exs
.cursor/rules/: accomplish-api.mdc  accomplish-elixir.mdc  accomplish-general.mdc  accomplish-liveview.mdc  accomplish-migration.mdc  accomplish-shadownrun.mdc  accomplish-testing.mdc
.github/: dependabot.yml
.github/workflows/: all-checks-pass.yml  cli.yml  codespell.yml  elixir.yml  node.yml  rust.yml
assets/: .prettierrc  .stylelintrc.json  build.js  eslint.config.js  package-lock.json  package.json  svelte.d.ts  tailwind.config.js  tsconfig.json
assets/css/: app.css
assets/js/: app.ts
assets/svelte/: Editor.svelte  Example.svelte  InlineEditor.svelte  PulseIndicator.svelte
assets/types/: live_svelte.d.ts
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  error.rs  errors.rs  main.rs  storage.rs
cli/src/api/: client.rs  endpoints.rs  errors.rs  models.rs
cli/src/auth/: auth.rs
cli/src/commands/: login.rs  logout.rs  mod.rs  status.rs
cli/src/services/: api.rs  callback_server.rs  keyring.rs  mod.rs  storage.rs
cli/static/: style.css
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: accomplish.ex  accomplish_web.ex
lib/accomplish/: accounts.ex  application.ex  config_helpers.ex  context.ex  events.ex  feature_flags_impl.ex  mailer.ex  oauth.ex  pdf_extractor.ex  repo.ex  repositories.ex  schema.ex  scopes.ex  slug.ex  token_cache.ex  uuidv7_validator.ex  validators.ex
lib/accomplish_web/: endpoint.ex  error_maper.ex  gettext.ex  nav.ex  navigation_tracker.ex  router.ex  telemetry.ex  user_auth.ex
lib/workers/: create_job_application_from_url.ex  extract_job_details_worker.ex  extract_resume_data_worker.ex  extract_resume_worker.ex  import_job_application_worker.ex  import_resume_data_worker.ex  import_resume_worker.ex  log_activity.ex  log_activity_worker.ex  process_resume.ex
livebooks/: README.md
native/pdf_extractor/: Cargo.toml  README.md
native/pdf_extractor/src/: lib.rs
priv/repo/: seeds.exs
test/: test_helper.exs
(+318 files in other folders)
