[package]
name = "accomplish"
version = "0.1.0"
edition = "2021"
description = "Accomplish: A CLI tool for managing tasks and authentication in the Accomplish app."
authors = ["Rui Freitas <rodloboz@heycom>"]

[dependencies]
axum = "0.6"
clap = { version = "4.5", features = ["derive"] }
dirs-next = "2.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
webbrowser = "1.0"

[dev-dependencies]
mockito = "0.30.0"
serde_json = "1.0"
serial_test = "0.6"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
